--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
         margin: 0;
         margin-top: 50px;
+        font-family: sans-serif;
       }
 
 header{
@@ -19,7 +20,7 @@ header* {
           height: 50px;
         }
 
-headerul{ padding: 0; }
+header ul{ padding: 0; }
 
 header li { margin-left: 20px;}
 
@@ -30,11 +31,40 @@ section{
         justify-content: center;
         align-items: center;
         text-align: center;
+        background-size: cover;
+        background-position: center center; 
+        background-repeat: no-repeat;
+        background-attachment: fixed;
         }
 
-#home .profile-img { width: 300px; }
+#home .profile-img { 
+                     width: 300px;
+                     border-radius: 50%
+                   }
 
 footer {
         text-align: center;
         padding: 50px;
         }
+
+#home h1 { font-size: 3em; }
+section h2 { font-size: 2.5em; }
+section h3 { font-size: 1.5em; }
+header a { text-decoration: none;
+            color: black;
+         }
+
+https://ramzyrsr.github.io/intro-html/ 
+{ background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), 
+  url(‘https://scontent.fcgk18-2.fna.fbcdn.net/v/t1.0-9/60903720_10219096913924536_7793117871105638400_n.jpg?_nc_cat=104&_nc_ht=scontent.fcgk18-2.fna&oh=0699be50b4ae038bf8f3da4b5bbced8f&oe=5D58596E‘);
+}
+
+https://ramzyrsr.github.io/cuddle/.new_page.html 
+{ background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), 
+  url(‘https://scontent.fcgk18-2.fna.fbcdn.net/v/t1.0-9/60232304_10219096916964612_1350888178050924544_n.jpg?_nc_cat=100&_nc_ht=scontent.fcgk18-2.fna&oh=72784f19fd9cf8cf9ca99d7dfc53735b&oe=5D54C31C‘);
+}
+
+https://ramzyrsr.github.io/contact/
+{ background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), 
+  url(‘https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-9/60586842_10219096915844584_3123709442135162880_n.jpg?_nc_cat=107&_nc_ht=scontent-sin6-1.xx&oh=870f6e76c4eae89bba33c7ab76d37127&oe=5D554E78‘);
+}
